<resources>
    <string name="app_name">TodoApplication</string>
    <string name="todo">todo</string>
    <string name="timestamp">timestamp</string>
    <string name="note_title">Note Title</string>
    <string name="enter_note_title">Enter Note Title</string>
    <string name="enter_note_description">Enter Note description</string>
    <string name="button" />
    <string name="Notes">Notes</string>
    <string name="update_note">Update Note</string>
    <string name="edit_note">Edit</string>
    <string name="save_note">Save Note</string>
    <string name="task_completed_or_not_enter_yes_or_no">Task Completed or Not? Enter yes or no</string>

</resources>