<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeLayout"

    android:background="@color/white"
    tools:context=".AddEditNoteActivity">


    <EditText
        android:id="@+id/idEditNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="Enter Note Title"
        android:hint="@string/enter_note_title"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/idEditNoteDescription"
        android:layout_width="401dp"
        android:layout_height="478dp"
        android:layout_below="@id/idEditNoteTitle"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints="@string/enter_note_description"
        android:gravity="start|top"
        android:hint="@string/enter_note_description"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />


    <Button
        android:id="@+id/idBtnAddUpdate"
        android:layout_width="match_parent"

        android:layout_height="65dp"


        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="62dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/save_note"
        tools:targetApi="lollipop" />


</RelativeLayout>